<resources>
    <string name="app_name">Announcer Clock</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="speak">speak</string>
    <string name="customize_tts">Text To Speech</string>
    <string name="voice_gender">Voice Gender</string>
    <string name="select_language">Select Language</string>
    <string name="select_speech_rate">Select Speech Rate</string>
    <string name="select_pitch_rate">Select Pitch Rate</string>
    <string name="general_settings">General Settings</string>
    <string name="repeat_every">Repeat Every</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="volume">Volume</string>
    <string name="text_to_speech_settings">Text To Speech Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="our_apps">Our Apps</string>
    <string name="share_app">Share App</string>
    <string name="version">Version</string>
    <string name="more">More</string>
    <string name="enable_hourly_talk_time">Enable announcer clock</string>
    <string name="enable_notification">Enable notification</string>
    <string name="enable_notification_sound">Enable notification sound</string>
    <string name="hourly_talk_time">Hourly Time Announcer Clock</string>
    <string name="timer_manager_and_hour_time_clock">Timer manager and hourly time announcer</string>
    <string name="enable_time_speaking">Enable Schedule time</string>
    <string name="custom_timer">Custom Timer</string>
    <string name="sound_settings">Sound Settings</string>
    <string name="disable_while_playing_music">Disable while playing music</string>
    <string name="enable_during_phone_calls">Enable during phone calls</string>
    <string name="app_theme">App Theme</string>
    <string name="enable_dark_theme_mode">Enable dark theme mode</string>
    <string name="choose_theme_color_options">Choose theme color options</string>
    <string name="interval_minute">Interval Minute</string>
    <string name="total_minute">Total Minute</string>
    <string name="schedule_timer">Schedule Timer</string>
    <string name="schedule_time">SET SCHEDULE</string>
    <string name="speak_time_every">speak time every</string>
    <string name="choose_your_sound">Choose your sound</string>
    <string name="set_schedule_timer">SET SCHEDULE TIMER</string>
    <string name="apply">APPLY</string>
    <string name="choose_app_color">CHOOSE APP COLOR</string>
    <string name="media_volume">Media Volume</string>
    <string name="notification_volume">Notification Volume</string>
    <string name="enable_text_to_speech">Enable text to speech</string>

</resources>