<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.themes_fragment.AppThemeFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/darkModeAnimation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/dark_mode"
        app:lottie_speed="2" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/llDarkThemeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkModeAnimation"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_14sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:spinnerMode="dialog"
                android:src="@drawable/theme"
                android:tint="@color/dark_blue" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompatSound3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtEnableDarkTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/enable_dark_theme_mode"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="normal" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/enableDarkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:padding="@dimen/_10sdp"
                    android:thumb="@drawable/toggle_thumb"
                    app:thumbTint="@color/dark_blue"
                    app:track="@drawable/toggle_track"
                    app:trackTint="@color/track_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtChooseColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/choose_theme_color_options"
        android:textSize="@dimen/_14ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/llDarkThemeLayout"
        app:layout_constraintTop_toBottomOf="@id/llDarkThemeLayout" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/colorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="flex_start"
        app:layout_constraintEnd_toEndOf="@+id/llDarkThemeLayout"
        app:layout_constraintStart_toStartOf="@id/txtChooseColor"
        app:layout_constraintTop_toBottomOf="@id/txtChooseColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseAppColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/bg_round"
        android:padding="@dimen/_12sdp"
        android:text="@string/choose_app_color"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/llDarkThemeLayout"
        app:layout_constraintStart_toStartOf="@id/txtChooseColor"
        app:layout_constraintTop_toBottomOf="@id/colorContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>